basic user retrieval. boom

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
+    "bcrypt": "^0.8.1",
+    "bedwetter": "^1.5.2",
     "boom": "^2.6.1",
     "code": "^1.3.0",
+    "dogwater": "^0.4.4",
     "getconfig": "^1.0.0",
     "good": "^5.1.1",
     "good-console": "^4.1.0",
@@ -20,6 +23,7 @@
     "grunt-hapi": "^0.9.1",
     "hapi": "^8.2.0",
     "hapi-mongodb": "^2.3.0",
+    "hapi-passport": "0.0.5",
     "hoek": "^2.11.0",
     "joi": "^5.1.0",
     "lab": "^5.2.1",
