--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-tap-event-plugin": "^0.1.4",
     "sass-loader": "^0.4.0-beta.1",
     "style-loader": "~0.8.0",
+    "superagent": "^0.21.0",
     "url-loader": "~0.5.5",
     "webpack": "~1.4.3",
     "webpack-dev-server": "~1.6.5"
