--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "good-http": "^4.0.0",
     "grunt-hapi": "^0.9.1",
     "hapi": "^8.2.0",
+    "hapi-auth-cookie": "^2.0.0",
     "hapi-mongodb": "^2.3.0",
     "hapi-passport": "0.0.5",
     "hoek": "^2.11.0",
