--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "mongoose": "^3.8.23",
+    "passport": "^0.2.1",
     "passport-local": "1.0.x",
+    "passport-local-mongoose": "^1.0.0",
     "react": "~0.12.2",
     "react-router": "^0.11.6",
     "tv": "^4.1.0"
