--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "bedwetter": "^1.5.2",
+    "bell": "^2.2.0",
     "boom": "^2.6.1",
     "code": "^1.3.0",
     "dogwater": "^0.4.4",
@@ -36,7 +37,9 @@
     "passport-local-mongoose": "^1.0.0",
     "react": "~0.12.2",
     "react-router": "^0.11.6",
-    "tv": "^4.1.0"
+    "tv": "^4.1.0",
+    "admit-one": "~0.3.1",
+    "admit-one-mongo": "~0.2.0"
   },
   "devDependencies": {
     "css-loader": "~0.9.0",
