--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "hoek": "^2.11.0",
     "joi": "^5.1.0",
     "lab": "^5.2.1",
+    "less": "^2.4.0",
+    "less-loader": "^2.0.0",
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "mongoose": "^3.8.23",
