--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^0.8.1",
     "boom": "^2.6.1",
     "code": "^1.3.0",
+    "cookies": "^0.5.0",
     "getconfig": "^1.0.0",
     "good": "^5.1.1",
     "good-console": "^4.1.0",
