--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "css-loader": "~0.9.0",
+    "google-maps": "^2.1.1",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-connect": "~0.8.0",
@@ -58,6 +59,7 @@
     "karma-webpack": "~1.2.2",
     "load-grunt-tasks": "~0.6.0",
     "material-ui": "^0.7.0",
+    "react-geosuggest": "^1.0.2",
     "react-hot-loader": "^1.0.7",
     "react-tap-event-plugin": "^0.1.4",
     "sass-loader": "^0.4.0-beta.1",
