--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "superagent": "^0.21.0",
     "url-loader": "~0.5.5",
     "webpack": "~1.4.3",
-    "webpack-dev-server": "~1.6.5"
+    "webpack-dev-server": "~1.6.5",
+    "flux": "~2.0.1"
   }
 }
