--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "mongoose": "^3.8.23",
-    "react": "~0.12.2",
-    "react-router": "^0.11.6",
     "tv": "^4.1.0"
   },
   "devDependencies": {
     "css-loader": "~0.9.0",
+    "flux": "~2.0.1",
     "google-maps": "^2.1.1",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
@@ -46,7 +45,6 @@
     "grunt-karma": "~0.8.3",
     "grunt-open": "~0.2.3",
     "grunt-webpack": "~1.0.8",
-    "hapi": "^8.2.0",
     "jshint-loader": "~0.8.0",
     "jsx-loader": "~0.12.2",
     "jsxhint-loader": "~0.2.0",
@@ -58,16 +56,17 @@
     "karma-script-launcher": "~0.1.0",
     "karma-webpack": "~1.2.2",
     "load-grunt-tasks": "~0.6.0",
-    "material-ui": "^0.7.0",
+    "material-ui": "^0.7.2",
+    "react": "^0.13.1",
     "react-geosuggest": "^1.0.2",
-    "react-hot-loader": "^1.0.7",
-    "react-tap-event-plugin": "^0.1.4",
+    "react-hot-loader": "^1.2.4",
+    "react-router": "^0.13.2",
+    "react-tap-event-plugin": "^0.1.6",
     "sass-loader": "^0.4.0-beta.1",
     "style-loader": "~0.8.0",
     "superagent": "^0.21.0",
     "url-loader": "~0.5.5",
     "webpack": "~1.4.3",
-    "webpack-dev-server": "~1.6.5",
-    "flux": "~2.0.1"
+    "webpack-dev-server": "~1.6.5"
   }
 }
