--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "karma-webpack": "~1.2.2",
     "load-grunt-tasks": "~0.6.0",
     "material-ui": "^0.7.2",
+    "mongoose-unique-validator": "^0.4.1",
     "react": "^0.13.1",
     "react-geosuggest": "^1.0.2",
     "react-hot-loader": "^1.2.4",
