--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "karma-webpack": "~1.2.2",
     "load-grunt-tasks": "~0.6.0",
     "material-ui": "^0.8",
+    "moment": "^2.10.3",
     "mongoose-unique-validator": "^0.4.1",
     "react": "^0.13.1",
     "react-geosuggest": "^1.0.2",
