--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "mongoose": "^3.8.23",
-    "tv": "^4.1.0"
+    "tv": "^4.1.0",
+    "load-grunt-tasks": "~0.6.0",
+    "webpack": "~1.4.3"
   },
   "devDependencies": {
     "css-loader": "~0.9.0",
@@ -56,7 +58,6 @@
     "karma-phantomjs-launcher": "~0.1.3",
     "karma-script-launcher": "~0.1.0",
     "karma-webpack": "~1.2.2",
-    "load-grunt-tasks": "~0.6.0",
     "material-ui": "^0.8",
     "moment": "^2.10.3",
     "mongoose-unique-validator": "^0.4.1",
@@ -69,7 +70,6 @@
     "style-loader": "~0.8.0",
     "superagent": "^0.21.0",
     "url-loader": "~0.5.5",
-    "webpack": "~1.4.3",
     "webpack-dev-server": "~1.6.5"
   }
 }
