--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "boom": "^2.6.1",
+    "cheerio": "^0.19.0",
     "code": "^1.3.0",
     "cookies": "^0.5.0",
     "getconfig": "^1.0.0",
@@ -28,11 +29,11 @@
     "lab": "^5.2.1",
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
+    "load-grunt-tasks": "~0.6.0",
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "mongoose": "^3.8.23",
     "tv": "^4.1.0",
-    "load-grunt-tasks": "~0.6.0",
     "webpack": "~1.4.3"
   },
   "devDependencies": {
