--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "karma-webpack": "~1.2.2",
     "material-ui": "^0.8",
     "moment": "^2.10.3",
+    "mongoose-find-one-or-create": "^0.2.0",
     "mongoose-unique-validator": "^0.4.1",
     "react": "^0.13.1",
     "react-geosuggest": "^1.0.2",
