--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "keywords": [],
   "author": "Your name here",
   "devDependencies": {
+    "axios": "^0.8.1",
     "babel-core": "^6.0.0",
     "babel-eslint": "^5.0.0-beta4",
     "babel-loader": "^6.0.0",
@@ -52,14 +53,14 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs": "^1.9.18",
+    "postcss": "^5.0.11",
+    "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "postcss": "^5.0.11",
-    "postcss-loader": "^0.8.0"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "alt": "^0.18.1",
