--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
