--- a/frontend0.1/package.json
+++ b/frontend0.1/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^3.3.0",
     "file-loader": "^0.8.4",
     "glob": "^6.0.0",
+    "history": "^1.17.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
@@ -58,6 +59,7 @@
     "postcss": "^5.0.11",
     "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.2.9",
+    "react-router": "^1.0.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.2",
     "style-loader": "^0.13.0",
