--- a/frontend0.1/package.json
+++ b/frontend0.1/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.3.13",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
     "copyfiles": "^0.2.1",
