--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
-    "bcrypt": "^0.8.1",
+    "bcrypt": "^0.8.6",
     "boom": "^2.6.1",
     "cheerio": "^0.19.0",
     "code": "^1.3.0",
@@ -33,9 +33,11 @@
     "lodash": "3.2.x",
     "lout": "^6.1.0",
     "tv": "^4.1.0",
+    "mongoose": "^4.4.19",
     "mongoose-find-one-or-create": "^0.2.0",
     "mongoose-unique-validator": "^0.4.1",
-    "webpack": "~1.4.3"
+    "webpack": "~1.4.3",
+        "superagent": "^2.0.0"
   },
   "devDependencies": {
     "bson": "^0.4.23",
@@ -63,7 +65,6 @@
     "karma-webpack": "~1.2.2",
     "material-ui": "^0.10.1",
     "moment": "^2.10.3",
-    "mongoose": "^4.4.19",
     "react": "^0.13.1",
     "react-geosuggest": "^1.0.2",
     "react-hot-loader": "^1.2.4",
@@ -71,7 +72,6 @@
     "react-tap-event-plugin": "^0.1.6",
     "sass-loader": "^0.4.0-beta.1",
     "style-loader": "~0.8.0",
-    "superagent": "^2.0.0",
     "url-loader": "~0.5.5",
     "webpack-dev-server": "~1.6.5"
   }
