--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcrypt-nodejs": "^0.8.6",
     "boom": "^2.6.1",
-    "cheerio": "^0.19.0",
+    "cheerio": "^0.20.0",
     "code": "^1.3.0",
     "cookies": "^0.5.0",
     "getconfig": "^1.0.0",
@@ -30,7 +30,7 @@
     "less": "^2.4.0",
     "less-loader": "^2.0.0",
     "load-grunt-tasks": "~0.6.0",
-    "lodash": "3.2.x",
+    "lodash": "4.13.1",
     "lout": "^6.1.0",
     "tv": "^4.1.0",
     "mongoose": "^4.4.19",
@@ -65,7 +65,7 @@
     "karma-webpack": "~1.2.2",
     "material-ui": "^0.10.1",
     "moment": "^2.10.3",
-    "react": "^0.13.1",
+    "react": "^0.15.1",
     "react-geosuggest": "^1.0.2",
     "react-hot-loader": "^1.2.4",
     "react-router": "^0.13.2",
