--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -59,7 +59,7 @@
     "phantomjs": "^1.9.18",
     "postcss": "^5.0.11",
     "postcss-loader": "^0.8.0",
-    "react-addons-test-utils": "^0.14.0",
+    "react-addons-test-utils": "~15.1.0",
     "react-hot-loader": "^1.2.9",
     "redux-simple-router": "^1.0.2",
     "rimraf": "^2.4.3",
@@ -67,7 +67,11 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "react-dom": "~15.1.0",
+    "react-redux": "~4.4.5",
+    "react-router": "~2.4.1",
+    "react": "~15.1.0"
   },
   "dependencies": {
     "babel-register": "^6.3.13",
@@ -78,10 +82,6 @@
     "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.0",
     "normalize.css": "^3.0.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-redux": "^4.0.6",
-    "react-router": "^1.0.3",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
     "redux-thunk": "^1.0.3"
