--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
-    "dist": "npm run copy & webpack --env=dist && webpack --env=serve",
+    "dist": "npm run copy & webpack --env=dist",
+    "dist:ssr": "npm run copy & webpack --env=serve",
     "lint": "eslint ./src",
     "posttest": "npm run lint",
     "serve": "node server.js --env=dev",
@@ -36,7 +37,6 @@
     "eslint": "^1.2.1",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "glob": "^6.0.0",
     "history": "^1.17.0",
@@ -54,24 +54,25 @@
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
     "node-sass": "^3.4.2",
+    "normalize.css": "~3.0.3",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs": "^1.9.18",
     "postcss": "^5.0.11",
+    "postcss-comment": "^1.0.3",
     "postcss-loader": "^0.8.0",
+    "postcss-scss": "^0.1.8",
+    "react": "~15.1.0",
     "react-addons-test-utils": "~15.1.0",
+    "react-dom": "~15.1.0",
     "react-hot-loader": "^1.2.9",
+    "react-redux": "~4.4.5",
+    "react-router": "~2.4.1",
     "redux-simple-router": "^1.0.2",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "react-dom": "~15.1.0",
-    "react-redux": "~4.4.5",
-    "react-router": "~2.4.1",
-    "react": "~15.1.0"
+    "url-loader": "^0.5.6"
   },
   "dependencies": {
     "babel-register": "^6.3.13",
@@ -80,10 +81,13 @@
     "ejs": "^2.3.4",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "isomorphic-fetch": "^2.2.0",
     "normalize.css": "^3.0.3",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.1",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
