--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^0.20.0",
     "code": "^1.3.0",
     "cookies": "^0.5.0",
+    "flounder-react": "0.0.11",
     "getconfig": "^1.0.0",
     "good": "^5.1.1",
     "good-console": "^4.1.0",
@@ -32,12 +33,12 @@
     "load-grunt-tasks": "~0.6.0",
     "lodash": "4.13.1",
     "lout": "^6.1.0",
-    "tv": "^4.1.0",
     "mongoose": "^4.4.19",
     "mongoose-find-one-or-create": "^0.2.0",
     "mongoose-unique-validator": "^0.4.1",
-    "webpack": "~1.4.3",
-        "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "tv": "^4.1.0",
+    "webpack": "~1.4.3"
   },
   "devDependencies": {
     "bson": "^0.4.23",
