--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -22,13 +22,14 @@
   "keywords": [],
   "author": "Your name here",
   "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
     "basscss": "^7.1.0",
     "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
@@ -75,12 +76,11 @@
     "url-loader": "^0.5.6"
   },
   "dependencies": {
-    "babel-register": "^6.3.13",
     "core-js": "^2.0.0",
     "critical": "^0.7.0",
     "ejs": "^2.3.4",
     "es6-promise": "^3.0.2",
-    "express": "^4.13.3",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "isomorphic-fetch": "^2.2.0",
     "normalize.css": "^3.0.3",
