--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -22,25 +22,11 @@
   "keywords": [],
   "author": "Your name here",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.9.0",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.9.0",
-    "basscss": "^7.1.0",
-    "bower-webpack-plugin": "^0.1.9",
     "chai": "^3.2.0",
-    "copyfiles": "^0.2.1",
-    "css-loader": "^0.23.1",
     "eslint": "^1.2.1",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.3.0",
-    "file-loader": "^0.8.4",
     "glob": "^6.0.0",
-    "history": "^1.17.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
@@ -51,14 +37,38 @@
     "karma-phantomjs-shim": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
-    "lodash": "^3.10.1",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
-    "node-sass": "^3.4.2",
-    "normalize.css": "~3.0.3",
-    "null-loader": "^0.1.1",
     "open": "0.0.5",
-    "phantomjs": "^1.9.18",
+    "phantomjs": "^1.9.18"
+  },
+  "dependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "basscss": "^7.1.0",
+    "bower-webpack-plugin": "^0.1.9",
+    "copyfiles": "^0.2.1",
+    "core-js": "^2.0.0",
+    "critical": "^0.7.0",
+    "css-loader": "^0.23.1",
+    "ejs": "^2.3.4",
+    "es6-promise": "^3.0.2",
+    "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "history": "^1.17.0",
+    "isomorphic-fetch": "^2.2.0",
+    "lodash": "^3.10.1",
+    "moment": "^2.13.0",
+    "node-sass": "^3.4.2",
+    "normalize.css": "^3.0.3",
+    "null-loader": "^0.1.1",
     "postcss": "^5.0.11",
     "postcss-comment": "^1.0.3",
     "postcss-loader": "^0.8.0",
@@ -69,24 +79,14 @@
     "react-hot-loader": "^1.2.9",
     "react-redux": "~4.4.5",
     "react-router": "~2.4.1",
+    "redux": "^3.0.5",
+    "redux-logger": "^2.3.1",
     "redux-simple-router": "^1.0.2",
+    "redux-thunk": "^1.0.3",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6"
-  },
-  "dependencies": {
-    "core-js": "^2.0.0",
-    "critical": "^0.7.0",
-    "ejs": "^2.3.4",
-    "es6-promise": "^3.0.2",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "isomorphic-fetch": "^2.2.0",
-    "normalize.css": "^3.0.3",
-    "redux": "^3.0.5",
-    "redux-logger": "^2.3.1",
-    "redux-thunk": "^1.0.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
