some cachine lark

--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist/*",
     "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
     "dist": "npm run copy & webpack --env=dist",
-    "dist:ssr": "npm run copy & webpack --env=serve",
+    "dist:ssr": "npm run copy & webpack --env=dist & webpack --env=serve",
     "lint": "eslint ./src",
     "posttest": "npm run lint",
     "serve": "node server.js --env=dev",
@@ -53,9 +53,9 @@
     "babel-register": "^6.9.0",
     "basscss": "^7.1.0",
     "bower-webpack-plugin": "^0.1.9",
+    "connect-cache": "^0.2.1",
     "copyfiles": "^0.2.1",
     "core-js": "^2.0.0",
-    "critical": "^0.7.0",
     "css-loader": "^0.23.1",
     "ejs": "^2.3.4",
     "es6-promise": "^3.0.2",
