--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
     "dist": "cd frontend0.2 && npm run copy & webpack --env=dist",
     "dist:ssr": "cd frontend0.2 &&  npm run copy & webpack --env=serve",
-    "deploy:ssr" : "cd install && ./deploy-ssr.sh"
+    "deploy:ssr": "cd install && ./deploy-ssr.sh"
   },
   "dependencies": {
+    "apicache": "0.0.14",
     "bcrypt-nodejs": "^0.8.6",
     "boom": "^2.6.1",
+    "catbox-mongodb": "^3.0.0",
     "cheerio": "^0.20.0",
     "code": "^1.3.0",
     "cookies": "^0.5.0",
+    "critical": "^0.7.3",
     "flounder-react": "0.0.11",
     "getconfig": "^1.0.0",
     "good": "^5.1.1",
