--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
     "dist": "cd frontend0.2 && npm run copy & webpack --env=dist",
     "dist:ssr": "cd frontend0.2 &&  npm run copy & webpack --env=serve",
-    "deploy:ssr": "cd install && ./deploy-ssr.sh"
+    "deploy:ssr": "cd install && ./deploy-ssr.sh",
+    "deploy:api": "cd install && ./deploy-srv.sh"
   },
   "dependencies": {
     "apicache": "0.0.14",
-    "bcrypt-nodejs": "^0.8.6",
     "boom": "^2.6.1",
     "catbox-mongodb": "^3.0.0",
     "cheerio": "^0.20.0",
