--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "apicache": "0.0.14",
+    "bluebird": "^3.4.1",
     "boom": "^2.6.1",
     "catbox-mongodb": "^3.0.0",
     "cheerio": "^0.20.0",
@@ -49,6 +50,7 @@
     "mongoose-find-one-or-create": "^0.2.0",
     "mongoose-unique-validator": "^0.4.1",
     "superagent": "^2.0.0",
+    "superagent-bluebird-promise": "^3.0.0",
     "tv": "^4.1.0",
     "webpack": "~1.4.3"
   },
