--- a/frontend0.2/package.json
+++ b/frontend0.2/package.json
@@ -64,8 +64,10 @@
     "file-loader": "^0.8.4",
     "history": "^1.17.0",
     "isomorphic-fetch": "^2.2.0",
+    "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4",
     "node-cache": "^3.2.1",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
