--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": "4.13.1",
     "lout": "^6.1.0",
     "moment": "^2.13.0",
+    "moment-timezone": "^0.5.4",
     "mongoose": "^4.4.19",
     "mongoose-find-one-or-create": "^0.2.0",
     "mongoose-unique-validator": "^0.4.1",
